Remove space below hamburger menu on small screens (iPhone 6 issue)

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -307,10 +307,6 @@ span.glyphicon-xs-black {
   font-size: 1.2em;
   }
 
-  .navbar-default {
-  padding-bottom: 20px;
-  }
-
   .background {
   padding-bottom: 80px;
   }
